tests/invalid/annotation_module_is_not_type/main.py
import provider


def main() -> None:
    x: provider = 1
